# telegram-music-bot

./: .containerignore  .env.sample  .gitignore  Cargo.toml  Containerfile  Containerfile.chainguard  LICENSE  README.md  bot.js  compose.yaml  compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
src/: main.rs  spotify.rs
